<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">Auto TTS requires access permission to work with TalkBack.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_build">Build number:</string>
    <string name="app_information">Information</string>
    <string name="app_name">Auto TTS</string>
    <string name="app_version">Version:</string>
    <string name="auto_mode">Modes</string>
    <string name="auto_mode_auto">Auto language detect</string>
    <string name="auto_mode_description">"Whole-sentence language recognition. Reads text by most appropriated language. If language can't be detected, reads by user-preferred language. This mode is designed for single-script texts from any language."</string>
    <string name="auto_mode_dual">Dual languages</string>
    <string name="auto_mode_google">Google TTS</string>
    <string name="auto_mode_header">Mode Settings</string>
    <string name="auto_mode_language">Select preferred language:</string>
    <string name="auto_mode_none">None</string>
    <string name="auto_mode_options">Other options</string>
    <string name="autotts_current_engine">Current engine</string>
    <string name="autotts_decrease">-</string>
    <string name="autotts_engine_failed">Auto TTS: init new engine failed.</string>
    <string name="autotts_engine_ready">Auto TTS: new engine is ready.</string>
    <string name="autotts_increase">+</string>
    <string name="autotts_init_engine">Auto TTS is initializing new engine.</string>
    <string name="autotts_language">Language</string>
    <string name="autotts_license">" &lt;p>&lt;b>Copyright &amp;#169; 2026 DIGIXMAS, Vietnam&lt;/b>&lt;/p> &lt;p>Auto TTS uses open source Android Open Source Project (AOSP) and Compact Language Detector 2 (CLD2). Both are licensed under the Apache License, Version 2.0.&lt;/p> &lt;ul> &lt;li> &lt;p>&lt;b>&lt;i>Android Open Source Project (AOSP)&lt;/i>&lt;/b>&lt;/p> &lt;p>Copyright &amp;#169; 2011 The Android Open Source Project&lt;/p> &lt;p>Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0&lt;/p> &lt;p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.&lt;/p> &lt;p>&lt;a href=http://www.apache.org/licenses/LICENSE-2.0>APACHE LICENSE, VERSION 2.0&lt;/a>&lt;/p> &lt;/li> &lt;li> &lt;p>&lt;b>&lt;i>Compact Language Detector 2 (CLD2)&lt;/i>&lt;/b>&lt;/p> &lt;p>Copyright 2013 Google Inc. All Rights Reserved.&lt;/p> &lt;p>Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0&lt;/p> &lt;p>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.&lt;/p> &lt;p>&lt;a href=http://www.apache.org/licenses/LICENSE-2.0>APACHE LICENSE, VERSION 2.0&lt;/a>&lt;/p> &lt;/li> &lt;/ul> "</string>
    <string name="autotts_pitch">Pitch</string>
    <string name="autotts_pitch_decrease">Decrease pitch</string>
    <string name="autotts_pitch_increase">Increase pitch</string>
    <string name="autotts_progress">Please wait while Auto TTS scans for all available languages and voices …</string>
    <string name="autotts_reset">Default</string>
    <string name="autotts_scan">Scanning</string>
    <string name="autotts_scan_engines">Scan for tts engines…</string>
    <string name="autotts_select_language">Select language</string>
    <string name="autotts_select_languages">Languages</string>
    <string name="autotts_select_languages_descr">"Select languages you want to work with.
Note: This list only includes languages supported by TTS engines on your device. If your language is missing, please install a third-party TTS engine that supports it."</string>
    <string name="autotts_select_languages_not_available">Language selection is not available for \"None\" and \"Dual languages\" modes.</string>
    <string name="autotts_select_voice">Choose a voice for language</string>
    <string name="autotts_select_voice_header">"Choose an installed voice for each language.
Tip: To avoid switching delays, we recommend assigning only one engine per language."</string>
    <string name="autotts_select_voice_variant">Choose a variant for voice</string>
    <string name="autotts_speed">Speed</string>
    <string name="autotts_speed_decrease">Decrease speed</string>
    <string name="autotts_speed_increase">Increase speed</string>
    <string name="autotts_stop">Stop</string>
    <string name="autotts_stop_progress">If scanning takes too long, click Stop button!</string>
    <string name="autotts_voice_settings_not_available">"Voices settings aren't available for \"None\" mode."</string>
    <string name="autotts_volume">Volume</string>
    <string name="autotts_volume_decrease">Decrease volume</string>
    <string name="autotts_volume_increase">Increase volume</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="disable_advanced_language_delection">Disable advanced language detection</string>
    <string name="disable_advanced_language_delection_description">Turn off advanced language detection for better performance.</string>
    <string name="disable_battery_optimization">Disable battery optimization</string>
    <string name="disable_battery_optimization_description">Request battery optimization exemptions for both Auto TTS and all associated third-party TTS engines to ensure uninterrupted performance.</string>
    <string name="export_settings">Export</string>
    <string name="force_accessibility_stream">Force to use audio accessibility stream</string>
    <string name="force_accessibility_stream_description">Route TTS audio output through the accessibility audio stream.</string>
    <string name="import_export">Import/Export Configuration</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_description">When importing settings, Auto TTS only checks if required third-party TTS engines are available. You must manually ensure that specific voices used in your configuration are installed and ready to use.</string>
    <string name="keep_alive">Keep alive</string>
    <string name="keep_alive_mode">Keep-alive Mode</string>
    <string name="keep_alive_mode_description">On certain devices, the system may terminate active voice synthesis sessions. Enabling this option prevents interruptions to third-party TTS engines. If you frequently notice speech cutting off mid-sentence, turn this on.</string>
    <string name="language_detection_settings">Language Detection Options</string>
    <string name="logger_clear">Clear logs</string>
    <string name="logger_description">Enable logging to help troubleshoot issues. If you need support or want to report a problem, please attach log files to your message.</string>
    <string name="logger_enable">Enable logging</string>
    <string name="logger_logging">Logging</string>
    <string name="logger_share">Share logs</string>
    <string name="persistence_settings">Persistence Options</string>
    <string name="punctuation_with_sentence">Read punctuation in flow with text</string>
    <string name="quick_character_reading">Quick character read</string>
    <string name="quick_character_reading_description">Reads a single character based on the preferred language in the mode settings.</string>
    <string name="remove_audio_attributes">Remove audio attributes from synthesis request.</string>
    <string name="remove_audio_attributes_description">Strip audio attributes when sending synthesis requests to third-party TTS engines. This is enabled automatically if Auto TTS detects an accessibility audio stream error, but you can also toggle it manually.</string>
    <string name="show_notification">Show persistent notification</string>
    <string name="show_notification_description">Use a foreground service and to keep Auto TTS running during battery optimization or screen-off states.</string>
    <string name="smart_number_reading">Smart number reading</string>
    <string name="smart_number_reading_description">Reads phone numbers and codes by group of digits.</string>
    <string name="smart_number_reading_group_size">Group size</string>
    <string name="synthesis_settings">Advanced Synthesis Options</string>
    <string name="synthesis_settings_description">On certain devices (such as Oppo, OnePlus, and Realme), the accessibility audio stream is strictly restricted to designated accessibility apps. Enabling below options allows Auto TTS to function correctly.</string>
    <string name="text_to_speech_settings">Text-to-Speech Settings</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="tts_settings_description">Open the system Text-to-Speech (TTS) settings screen</string>
</resources>