<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scroller" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="@id/constraintLayout">
        <LinearLayout android:orientation="vertical" android:id="@id/SettingsContainer" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_to_speech_settings" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <Button android:id="@id/tts_settings" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tts_settings" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tts_settings_description" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/synthesis_settings" />
            </LinearLayout>
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/synthesis_settings_description" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Small" />
            <CheckBox android:id="@id/remove_audio_attributes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/remove_audio_attributes" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remove_audio_attributes_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <CheckBox android:id="@id/force_accessibility_stream" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/force_accessibility_stream" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/force_accessibility_stream_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/keep_alive_mode" />
            </LinearLayout>
            <CheckBox android:id="@id/keep_alive_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/keep_alive" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/keep_alive_mode_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/persistence_settings" />
            </LinearLayout>
            <CheckBox android:id="@id/show_notification" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/show_notification" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show_notification_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/disable_battery_optimization_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disable_battery_optimization" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disable_battery_optimization_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/language_detection_settings" />
            </LinearLayout>
            <CheckBox android:id="@id/disable_advanced_detect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/disable_advanced_language_delection" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disable_advanced_language_delection_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <CheckBox android:id="@id/quick_character_reading" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/quick_character_reading" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/quick_character_reading_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <CheckBox android:id="@id/punctuation_with_sentence" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/punctuation_with_sentence" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/quick_character_reading_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <CheckBox android:id="@id/smart_number_reading" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/smart_number_reading" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/smart_number_reading_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <TextView android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/smart_number_reading_group_size" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
                <Spinner android:id="@id/smart_number_reading_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:prompt="@string/smart_number_reading_group_size" android:layout_marginStart="5.0dip" style="@android:style/TextAppearance.Medium" />
            </LinearLayout>
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/import_export" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <Button android:id="@id/import_settings_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/import_settings" android:layout_weight="1.0" android:layout_marginEnd="4.0dip" />
                <Button android:id="@id/export_settings_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/export_settings" android:layout_weight="1.0" android:layout_marginStart="4.0dip" />
            </LinearLayout>
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/import_settings_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/logger_logging" />
            </LinearLayout>
            <CheckBox android:id="@id/enable_logging" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/logger_enable" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Medium" />
            <TextView android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/logger_description" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" style="@android:style/TextAppearance.Small" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <Button android:layout_gravity="center_horizontal" android:id="@id/share_logs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logger_share" />
                <Button android:layout_gravity="center_horizontal" android:id="@id/clear_logs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logger_clear" />
            </LinearLayout>
            <LinearLayout android:gravity="start" android:background="#ff293842" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/app_information" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/app_build" style="@android:style/TextAppearance.Small" />
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/app_build_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="\###" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip">
                <TextView android:textSize="18.0sp" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/app_version" style="@android:style/TextAppearance.Small" />
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="\###" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>