<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:padding="@dimen/appbar_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize">
            <ImageView android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/ic_launcher" android:contentDescription="@string/app_name" android:layout_marginEnd="8.0dip" />
            <TextView android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linlaHeaderProgress" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/autotts_progress" style="@android:style/TextAppearance.Large" />
        <ProgressBar android:gravity="center" android:id="@id/pbHeaderProgress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" style="@android:style/Widget.ProgressBar.Large" />
        <TextView android:gravity="center" android:id="@id/current_engine" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/autotts_scan_engines" style="@android:style/TextAppearance.Medium" />
    </LinearLayout>
    <androidx.viewpager2.widget.ViewPager2 android:id="@id/view_pager" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <com.google.android.material.tabs.TabLayout android:id="@id/tabs" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" app:tabGravity="fill" app:tabIndicatorGravity="top" app:tabMode="fixed" />
</LinearLayout>